app2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashresponse-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashresponse
  template:
    metadata:
      labels:
        app: hashresponse
    spec:
      containers:
        - name: hashresponse
          image: jakousa/dwk-app2:e11a700350aede132b62d3b5fd63c05d6b976394
